--- a/docs/docs/cmd/entra/m365group/m365group-set.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-set.mdx
@@ -19,11 +19,14 @@ m365 aad m365group set [options]
 ## Options
 
 ```md definition-list
-`-i, --id <id>`
+`-i, --id [id]`
 : The ID of the Microsoft 365 Group to update
 
 `-n, --displayName [displayName]`
-: Display name for the Microsoft 365 Group
+: Display name for the Microsoft 365 Group to update
+
+`--newDisplayName [newDisplayName]`
+: New display name for the Microsoft 365 Group
 
 `-d, --description [description]`
 : Description for the Microsoft 365 Group
@@ -72,7 +75,7 @@ Options `allowExternalSenders` and `autoSubscribeNewMembers` can only be set usi
 Update Microsoft 365 Group display name.
 
 ```sh
-m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --displayName Finance
+m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --newDisplayName Finance
 ```
 
 Change Microsoft 365 Group visibility to public.
@@ -81,16 +84,16 @@ Change Microsoft 365 Group visibility to public.
 m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --isPrivate `false`
 ```
 
-Add new Microsoft 365 Group owners.
+Add new Microsoft 365 Group owners of group.
 
 ```sh
-m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --owners "DebraB@contoso.onmicrosoft.com,DiegoS@contoso.onmicrosoft.com"
+m365 entra m365group set --displayName 'Project Team' --owners "DebraB@contoso.onmicrosoft.com,DiegoS@contoso.onmicrosoft.com"
 ```
 
 Add new Microsoft 365 Group members.
 
 ```sh
-m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --members "DebraB@contoso.onmicrosoft.com,DiegoS@contoso.onmicrosoft.com"
+m365 entra m365group set --displayName 'Project Team' --members "DebraB@contoso.onmicrosoft.com,DiegoS@contoso.onmicrosoft.com"
 ```
 
 Update Microsoft 365 Group logo.
