Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -33,20 +33,26 @@ sidebar_position: 3
 
 - [teams meeting transcript get](../cmd/teams/meeting/meeting-transcript-get.mdx) - downloads a transcript for a given meeting [#3908](https://github.com/pnp/cli-microsoft365/issues/3908)
 
+**Viva:**
+
+- [viva engage community list](../cmd/viva/engage/engage-community-list.mdx) - lists all Viva Engage communities [#6278](https://github.com/pnp/cli-microsoft365/issues/6278)
+
 ### Changes
 
-- enhanced 'flow export' endpoints. [#6297](https://github.com/pnp/cli-microsoft365/issues/6297)
-- enhanced 'spo file' to use utils. [#5268](https://github.com/pnp/cli-microsoft365/issues/5268)
-- enhanced [spo page section add](../cmd/spo/page/page-section-add.mdx) with extended zoneEmphasis options. [#5268](https://github.com/pnp/cli-microsoft365/issues/5268)
-- fixed 'VersionPolicies' on generic list. [#6264](https://github.com/pnp/cli-microsoft365/issues/6264)
-- fixed user retrieval using the correct property. [#6308](https://github.com/pnp/cli-microsoft365/issues/6308)
-- enhanced [spo user get](../cmd/spo/user/user-get.mdx) with extra options. [#5516](https://github.com/pnp/cli-microsoft365/issues/5516)
-- fixed logging in with passwordless certificate. [#6337](https://github.com/pnp/cli-microsoft365/issues/6337)
-- fixed serializing bool values in CSV output. [#6326](https://github.com/pnp/cli-microsoft365/issues/6326)
-- fixed mistakes in doc pages.
-- added support for SPFx v1.20.0-rc.1. [#6301](https://github.com/pnp/cli-microsoft365/issues/6301)
-- fixed login command. [#6334](https://github.com/pnp/cli-microsoft365/issues/6334)
+- fixed [flow export](../cmd/flow/flow-export.mdx) endpoints [#6297](https://github.com/pnp/cli-microsoft365/issues/6297)
+- enhanced 'spo file' to use utils [#5268](https://github.com/pnp/cli-microsoft365/issues/5268)
+- enhanced [spo page section add](../cmd/spo/page/page-section-add.mdx) with extended zoneEmphasis options [#5268](https://github.com/pnp/cli-microsoft365/issues/5268)
+- fixed 'VersionPolicies' on generic lists [#6264](https://github.com/pnp/cli-microsoft365/issues/6264)
+- fixed user retrieval using the correct property [#6308](https://github.com/pnp/cli-microsoft365/issues/6308)
+- enhanced [spo user get](../cmd/spo/user/user-get.mdx) with extra options [#5516](https://github.com/pnp/cli-microsoft365/issues/5516)
+- fixed logging in with passwordless certificate [#6337](https://github.com/pnp/cli-microsoft365/issues/6337)
+- fixed serializing bool values in CSV output [#6326](https://github.com/pnp/cli-microsoft365/issues/6326)
+- added support for SPFx v1.20.0-rc.1 [#6301](https://github.com/pnp/cli-microsoft365/issues/6301)
+- fixed login command [#6334](https://github.com/pnp/cli-microsoft365/issues/6334)
 - refactored leftover files of codebase to async/await [#5147](https://github.com/pnp/cli-microsoft365/issues/5147)
+- improved output of [spo site admin list](../cmd/spo/site/site-admin-list.mdx) when running as admin [#6182](https://github.com/pnp/cli-microsoft365/issues/6182)
+- fixed asciinema player mount on docs [#6204](https://github.com/pnp/cli-microsoft365/issues/6204)
+
 
 ## [v9.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.0.0)
 
