Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -6,6 +6,10 @@ sidebar_position: 3
 
 ## v10.0.0 (beta)
 
+### Changes
+
+- updated docs thumbnail [#6302](https://github.com/pnp/cli-microsoft365/issues/6302)
+
 ### ⚠️ Breaking changes
 
 - updated option names of [app permission add](../cmd/app/permission/permission-add.mdx) to plural [#5719](https://github.com/pnp/cli-microsoft365/issues/5975)
@@ -14,8 +18,8 @@ sidebar_position: 3
 - aligned options with naming convention [#5616](https://github.com/pnp/cli-microsoft365/issues/5616)
 - removed duplicate property from [spo list list](../cmd/spo/list/list-list.mdx) command [#6042](https://github.com/pnp/cli-microsoft365/issues/6042)
 - updated [spo tenant recyclebinitem restore](../cmd/spo/tenant/tenant-recyclebinitem-restore.mdx) command output [#6063](https://github.com/pnp/cli-microsoft365/issues/6063)
-- removed deprecated option `wait` from [spo site remove](../cmd/spo/site/site-remove.mdx) command [#5956](https://github.com/pnp/cli-microsoft365/issues/5956)
-- reworked command [spo file copy](../cmd/spo/file/file-copy.mdx) to new API endpoint [#6152](https://github.com/pnp/cli-microsoft365/issues/6152)
+- removed deprecated option `wait` option from [spo site remove](../cmd/spo/site/site-remove.mdx) command [#5956](https://github.com/pnp/cli-microsoft365/issues/5956)
+- reworked command options of command [spo file copy](../cmd/spo/file/file-copy.mdx) [#6152](https://github.com/pnp/cli-microsoft365/issues/6152)
 - removed deprecated CLI environment variables [#5918](https://github.com/pnp/cli-microsoft365/issues/5918)
 - updated options of `entra enterpriseapp` commands [#6155](https://github.com/pnp/cli-microsoft365/issues/6155)
 - removed `overwrite` option from [spfx project github workflow add](../cmd/spfx/project/project-github-workflow-add.mdx) command [#5765](https://github.com/pnp/cli-microsoft365/issues/5765)
@@ -25,8 +29,15 @@ sidebar_position: 3
 - removed all `yammer` command aliases [#5764](https://github.com/pnp/cli-microsoft365/issues/5764)
 - removed `showSpinner` config variable [#6126](https://github.com/pnp/cli-microsoft365/issues/6126)
 - aligned options of `spo contenttype field` commands [#6170](https://github.com/pnp/cli-microsoft365/issues/6170)
-- enhanced the output of 'spo sitescript get'. [#5559](https://github.com/pnp/cli-microsoft365/issues/5559)
-- updates 'spo file move' to the new endpoint. [#6153](https://github.com/pnp/cli-microsoft365/issues/6153)
+- enhanced the output of [spo sitescript get](../cmd/spo/sitescript/sitescript-get.mdx) command [#5559](https://github.com/pnp/cli-microsoft365/issues/5559)
+- updated [spo file move](../cmd/spo/file/file-move.mdx) options [#6153](https://github.com/pnp/cli-microsoft365/issues/6153)
+- updated purpose of option `displayName` for [entra m365group set](../cmd/entra/m365group/m365group-set.mdx) command [#6146](https://github.com/pnp/cli-microsoft365/issues/6146)
+- renamed command `spo site rename` to [spo tenant site rename](../cmd/spo/tenant/tenant-site-rename.mdx) [#6142](https://github.com/pnp/cli-microsoft365/issues/6142)
+- removed `cli reconsent` command [#6360](https://github.com/pnp/cli-microsoft365/issues/6360)
+- ensured empty result output for various list commands [#6288](https://github.com/pnp/cli-microsoft365/issues/6288)
+- removed deprecated `userName` option from [entra m365group user add](../cmd/entra/m365group/m365group-user-add.mdx) command [#6218](https://github.com/pnp/cli-microsoft365/issues/6218)
+- updated [cli doctor](../cmd/cli/cli-doctor.mdx) command output [#5923](https://github.com/pnp/cli-microsoft365/issues/5923)
+- removed duplicate properties from [teams tab list](../cmd/teams/tab/tab-list.mdx) command [#5900](https://github.com/pnp/cli-microsoft365/issues/5900)
 
 ## v9.1.0 (beta)
 
