--- a/docs/docs/v6-upgrade-guidance.mdx
+++ b/docs/docs/v6-upgrade-guidance.mdx
@@ -9,7 +9,7 @@ In CLI for Microsoft 365 we had several commands that were originally targeted a
 Command | Merged with
 --|--
 `spo site classic add` | [spo site add](./cmd/spo/site/site-add.mdx)
-`spo site classic list` | [spo site list](./cmd/spo/site/site-list.mdx)
+`spo site classic list` | [spo site list](./cmd/spo/tenant/tenant-site-list.mdx)
 `spo site classic set` | [spo site set](./cmd/spo/site/site-set.mdx)
 
 To fix a resulting issue with the `spo site list` command, the default value of the `type` option of that command has been removed.
