--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -128,7 +128,7 @@ Update your scripts to use the new options. Verify that your scripts work as int
 
 ### Removed `deleted` flag from `spo site list` command
 
-In the previous versions of CLI for Microsoft 365, you could get deleted sites from your SharePoint tenant using the command [spo site list](./cmd/spo/site/site-list.mdx) by providing the flag `--deleted`. In the latest release, we have removed this option from the command. To get all deleted sites in your tenant, you can now use the command [spo tenant recyclebinitem list](./cmd/spo/tenant/tenant-recyclebinitem-list.mdx).
+In the previous versions of CLI for Microsoft 365, you could get deleted sites from your SharePoint tenant using the command [spo site list](./cmd/spo/tenant/tenant-site-list.mdx) by providing the flag `--deleted`. In the latest release, we have removed this option from the command. To get all deleted sites in your tenant, you can now use the command [spo tenant recyclebinitem list](./cmd/spo/tenant/tenant-recyclebinitem-list.mdx).
 
 #### What action do I need to take?
 
