--- a/docs/docs/cmd/spo/list/list-remove.mdx
+++ b/docs/docs/cmd/spo/list/list-remove.mdx
@@ -9,7 +9,7 @@ Removes the specified list
 ```sh
 m365 spo list remove [options]
 ```
-
+ 
 ## Options
 
 ```md definition-list
@@ -21,6 +21,9 @@ m365 spo list remove [options]
 
 `-t, --title [title]`
 : Title of the list to remove. Specify either `id` or `title` but not both.
+
+`--recycle`
+: Recycle the list
 
 `-f, --force`
 : Don't prompt for confirming removing the list.
@@ -40,6 +43,12 @@ Remove the list with a specific title located in a specific site.
 
 ```sh
 m365 spo list remove --webUrl https://contoso.sharepoint.com/sites/project-x --title 'List 1'
+```
+
+Remove the list with a specific ID located in a specific site and send it to recycle bin
+
+```sh
+m365 spo list remove --webUrl https://contoso.sharepoint.com/sites/project-x --id 0cd891ef-afce-4e55-b836-fce03286cccf --recycle
 ```
 
 ## Response
