--- a/docs/docs/cmd/spo/field/field-set.mdx
+++ b/docs/docs/cmd/spo/field/field-set.mdx
@@ -26,10 +26,13 @@ m365 spo field set [options]
 : Server- or site-relative URL of the list where the field is located (if list column). Specify either `listTitle`, `listId` or `listUrl`.
 
 `-i, --id [id]`
-: ID of the field to update. Specify either `id` or `title` but not both.
+: ID of the field to update. Specify either `id`, `title`, or 'internalName' but not all.
 
 `-t, --title [title]`
-: Title or internal name of the field to update. Specify either `id` or `title` but not both.
+: Title of the field to update. Specify either `id`, `title`, or 'internalName' but not all.
+
+`--internalName [internalName]`
+: Internal name of the field to update. Specify either `id`, `title`, or 'internalName' but not all.
 
 `--updateExistingLists`
 : Set, to push the update to existing lists. Otherwise, the changes will apply to new lists only.
@@ -52,6 +55,12 @@ When updating column formatting for a field with the `--CustomFormatter` option,
 Update the title of the site column specified by its internal name and push changes to existing lists.
 
 ```sh
+m365 spo field set --webUrl https://contoso.sharepoint.com/sites/project-x --internalName 'MyColumn' --updateExistingLists --Title 'My column'
+```
+
+Update the title of the site column specified by its title and push changes to existing lists.
+
+```sh
 m365 spo field set --webUrl https://contoso.sharepoint.com/sites/project-x --title 'MyColumn' --updateExistingLists --Title 'My column'
 ```
 
@@ -67,10 +76,15 @@ Update the description of a column specified by the ID on a list retrieved by th
 m365 spo field set --webUrl https://contoso.sharepoint.com/sites/project-x --listUrl '/sites/project-x/Lists/My List' --id 330f29c5-5c4c-465f-9f4b-7903020ae1ce --Description 'My column Description'
 ```
 
-Update column formatting of the specified list column.
+Update column formatting of the specified list column based on title.
 
 ```sh
 m365 spo field set --webUrl https://contoso.sharepoint.com/sites/project-x --listTitle 'My List' --title 'MyColumn' --CustomFormatter '{"schema":"https://developer.microsoft.com/json-schemas/sp/column-formatting.schema.json", "elmType": "div", "txtContent": "@currentField"}'
+```
+Update column formatting of the specified list column based on internalName.
+
+```sh
+m365 spo field set --webUrl https://contoso.sharepoint.com/sites/project-x --listTitle 'My List' --internalName 'MyColumn' --CustomFormatter '{"schema":"https://developer.microsoft.com/json-schemas/sp/column-formatting.schema.json", "elmType": "div", "txtContent": "@currentField"}'
 ```
 
 ## Response
