Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -24,6 +24,7 @@ sidebar_position: 3
 - [spo folder sharinglink remove](../cmd/spo/folder/folder-sharinglink-remove.mdx) - removes a sharing links from a folder [#5966](https://github.com/pnp/cli-microsoft365/issues/5966)
 - [spo site admin add](../cmd/spo/site/site-admin-add.mdx) - adds a user or group as a site collection administrator [#5883](https://github.com/pnp/cli-microsoft365/issues/5883)
 - [spo site admin remove](../cmd/spo/site/site-admin-remove.mdx) - removes a user or group as site collection administrator [#5884](https://github.com/pnp/cli-microsoft365/issues/5884)
+- [spo site sharingpermission set](../cmd/spo/site/site-sharingpermission-set.mdx) - sets the sharing permissions for a site collection [#6266](https://github.com/pnp/cli-microsoft365/issues/6266)
 
 **SharePoint Premium:**
 
@@ -52,7 +53,7 @@ sidebar_position: 3
 - refactored leftover files of codebase to async/await [#5147](https://github.com/pnp/cli-microsoft365/issues/5147)
 - improved output of [spo site admin list](../cmd/spo/site/site-admin-list.mdx) when running as admin [#6182](https://github.com/pnp/cli-microsoft365/issues/6182)
 - fixed asciinema player mount on docs [#6204](https://github.com/pnp/cli-microsoft365/issues/6204)
-
+- enhanced [spo page remove](../cmd/spo/page/page-remove.mdx) to support deleting locked pages [#6294](https://github.com/pnp/cli-microsoft365/issues/6294)
 
 ## [v9.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.0.0)
 
