change logging behavior (reverted) in order to avoid overflooding the console with unnecessary output

--- a/docs/docs/sample-scripts/entra/find-obsolete-m365-groups/index.mdx
+++ b/docs/docs/sample-scripts/entra/find-obsolete-m365-groups/index.mdx
@@ -190,7 +190,7 @@ Use this script to create a report of all M365 groups that are possibly obsolete
       try {
         $Global:ObsoleteGroups.Add($Group.Reference.id, $Group)
       }
-      catch { Write-Information "Group was already added to the list of potentially obsolete groups" }
+      catch { }
       return
     }
 
@@ -205,7 +205,7 @@ Use this script to create a report of all M365 groups that are possibly obsolete
       try {
         $Global:ObsoleteGroups.Add($Group.Reference.id, $Group)
       }
-      catch { Write-Information "Group was already added to the list of potentially obsolete groups" }
+      catch { }
     }
   }
 
@@ -232,7 +232,7 @@ Use this script to create a report of all M365 groups that are possibly obsolete
       try {
         $Global:ObsoleteGroups.Add($Group.Reference.id, $Group)
       }
-      catch { Write-Information "Group was already added to the list of potentially obsolete groups" }
+      catch { }
     }  
   }
 
@@ -262,7 +262,7 @@ Use this script to create a report of all M365 groups that are possibly obsolete
     try {
       $Global:ObsoleteGroups.Add($Group.Reference.id, $Group)
     }
-    catch { Write-Information "Group was already added to the list of potentially obsolete groups" }
+    catch { }
   }
 
   function New-Report {
