Enhances spo contenttype commands with Parent expand. Closes #6329

--- a/docs/docs/cmd/spo/contenttype/contenttype-get.mdx
+++ b/docs/docs/cmd/spo/contenttype/contenttype-get.mdx
@@ -108,6 +108,12 @@ m365 spo contenttype get --webUrl https://contoso.sharepoint.com/sites/contoso-s
     "NewFormTarget": 0,
     "NewFormTemplateName": "ListForm",
     "NewFormUrl": "",
+    "Parent": {
+      "StringId": "0x01000B1208C5D23DF",
+      "Name": "Item",
+      "Group": "List items",
+      "Id": { "StringId": "0x01000B1208C5D23DF" }
+    },
     "ReadOnly": false,
     "SchemaXml": "<ContentType ID=\"0x01007926A45D687BA842B947286090B8F67D\" Name=\"PnP Alert\" Group=\"PnP Content Types\" Description=\"Create a new list item.\" Version=\"0\"><Folder TargetName=\"_cts/PnP Alert\" /><Fields><Field ID=\"{c042a256-787d-4a6f-8a8a-cf6ab767f12d}\" Name=\"ContentType\" SourceID=\"http://schemas.microsoft.com/sharepoint/v3\" StaticName=\"ContentType\" Group=\"_Hidden\" Type=\"Computed\" DisplayName=\"Content Type\" Sealed=\"TRUE\" Sortable=\"FALSE\" RenderXMLUsingPattern=\"TRUE\" PITarget=\"MicrosoftWindowsSharePointServices\" PIAttribute=\"ContentTypeID\" DelayActivateTemplateBinding=\"GROUP,SPSPERS,SITEPAGEPUBLISHING\" Customization=\"\"><FieldRefs><FieldRef ID=\"{03e45e84-1992-4d42-9116-26f756012634}\" Name=\"ContentTypeId\" /></FieldRefs><DisplayPattern><MapToContentType><Column Name=\"ContentTypeId\" /></MapToContentType></DisplayPattern></Field><Field ID=\"{fa564e0f-0c70-4ab9-b863-0177e6ddd247}\" Name=\"Title\" SourceID=\"http://schemas.microsoft.com/sharepoint/v3\" StaticName=\"Title\" Group=\"_Hidden\" Type=\"Text\" DisplayName=\"Title\" Required=\"TRUE\" FromBaseType=\"TRUE\" DelayActivateTemplateBinding=\"GROUP,SPSPERS,SITEPAGEPUBLISHING\" Customization=\"\" ShowInNewForm=\"TRUE\" ShowInEditForm=\"TRUE\"></Field></Fields><XmlDocuments><XmlDocument NamespaceURI=\"http://schemas.microsoft.com/sharepoint/v3/contenttype/forms\"><FormTemplates xmlns=\"http://schemas.microsoft.com/sharepoint/v3/contenttype/forms\"><Display>ListForm</Display><Edit>ListForm</Edit><New>ListForm</New></FormTemplates></XmlDocument></XmlDocuments></ContentType>",
     "Scope": "/sites/contoso-sales",
@@ -170,7 +176,7 @@ m365 spo contenttype get --webUrl https://contoso.sharepoint.com/sites/contoso-s
 
   Date: 10/2/2023
 
-  ## PnP Alert ([object Object])
+  ## PnP Alert (0x01007926A45D687BA842B947286090B8F67D)
 
   Property | Value
   ---------|-------
