--- a/docs/docs/cmd/spo/list/list-contenttype-list.mdx
+++ b/docs/docs/cmd/spo/list/list-contenttype-list.mdx
@@ -87,6 +87,12 @@ m365 spo list contenttype list --webUrl https://contoso.sharepoint.com/sites/pro
       "NewFormTarget": 0,
       "NewFormTemplateName": "ListForm",
       "NewFormUrl": "",
+      "Parent": {
+        "StringId": "0x01000B1208C5D23DF",
+        "Name": "Item",
+        "Group": "List items",
+        "Id": { "StringId": "0x01000B1208C5D23DF" }
+      },
       "ReadOnly": false,
       "SchemaXml": "<ContentType ID=\"0x01000B1208C5D23DF44B9F1AEE7373DE9D5E\" Name=\"Item\" Group=\"List Content Types\" Description=\"Create a new list item.\" Version=\"0\" FeatureId=\"{695b6570-a48b-4a8e-8ea5-26ea7fc1d162}\" FeatureIds=\"{695b6570-a48b-4a8e-8ea5-26ea7fc1d162};{c94c1702-30a7-454c-be15-5a895223428d}\"><Folder TargetName=\"Item\"/><Fields><Field ID=\"{c042a256-787d-4a6f-8a8a-cf6ab767f12d}\" Type=\"Computed\" DisplayName=\"Content Type\" Name=\"ContentType\" DisplaceOnUpgrade=\"TRUE\" RenderXMLUsingPattern=\"TRUE\" Sortable=\"FALSE\" SourceID=\"http://schemas.microsoft.com/sharepoint/v3\" StaticName=\"ContentType\" Group=\"_Hidden\" PITarget=\"MicrosoftWindowsSharePointServices\" PIAttribute=\"ContentTypeID\" FromBaseType=\"TRUE\"><FieldRefs><FieldRef Name=\"ContentTypeId\"/></FieldRefs><DisplayPattern><MapToContentType><Column Name=\"ContentTypeId\"/></MapToContentType></DisplayPattern></Field><Field ID=\"{fa564e0f-0c70-4ab9-b863-0177e6ddd247}\" Type=\"Text\" Name=\"Title\" DisplayName=\"Title\" Required=\"TRUE\" SourceID=\"http://schemas.microsoft.com/sharepoint/v3\" StaticName=\"Title\" FromBaseType=\"TRUE\" ColName=\"nvarchar1\" ShowInNewForm=\"TRUE\" ShowInEditForm=\"TRUE\"/></Fields><XmlDocuments><XmlDocument NamespaceURI=\"http://schemas.microsoft.com/sharepoint/v3/contenttype/forms\"><FormTemplates xmlns=\"http://schemas.microsoft.com/sharepoint/v3/contenttype/forms\"><Display>ListForm</Display><Edit>ListForm</Edit><New>ListForm</New></FormTemplates></XmlDocument></XmlDocuments></ContentType>",
       "Scope": "/Lists/Test",
@@ -121,7 +127,7 @@ m365 spo list contenttype list --webUrl https://contoso.sharepoint.com/sites/pro
 
   Date: 2/20/2023
 
-  ## Document ([object Object])
+  ## Document (0x01000B1208C5D23DF44B9F1AEE7373DE9D5E)
 
   Property | Value
   ---------|-------
